--- a/test/fixtures/cidades.yml
+++ b/test/fixtures/cidades.yml
@@ -2,13 +2,14 @@
 #
 # Table name: cidades
 #
-#  id         :integer          not null, primary key
-#  nome       :string
-#  uf         :string
-#  latitude   :string
-#  longitude  :string
-#  created_at :datetime         not null
-#  updated_at :datetime         not null
+#  id              :integer          not null, primary key
+#  nome            :string
+#  uf              :string
+#  latitude        :string
+#  longitude       :string
+#  created_at      :datetime         not null
+#  updated_at      :datetime         not null
+#  pacientes_count :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
