--- a/test/fixtures/cidades.yml
+++ b/test/fixtures/cidades.yml
@@ -9,7 +9,7 @@
 #  longitude       :string
 #  created_at      :datetime         not null
 #  updated_at      :datetime         not null
-#  pacientes_count :integer          default(0)
+#  pacientes_count :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
