--- a/test/fixtures/imunizacao_solicitacaos.yml
+++ b/test/fixtures/imunizacao_solicitacaos.yml
@@ -27,6 +27,7 @@
 #  updated_at                :datetime         not null
 #  telefone_paciente         :string
 #  idade                     :integer
+#  deferimento               :text
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
