--- a/test/fixtures/dst_produtos.yml
+++ b/test/fixtures/dst_produtos.yml
@@ -8,6 +8,7 @@
 #  unidade_medida :string
 #  created_at     :datetime         not null
 #  updated_at     :datetime         not null
+#  status         :boolean
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
