--- a/test/fixtures/cidades.yml
+++ b/test/fixtures/cidades.yml
@@ -10,6 +10,7 @@
 #  created_at      :datetime         not null
 #  updated_at      :datetime         not null
 #  pacientes_count :integer          default(0)
+#  status          :boolean
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
